--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                                 class="nav-link hover-orange">Quiz</a></b>
                     </li>
 
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
+                                class="nav-link hover-orange">Reports</a></b>
+                    </li>
+
                     <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
                                 class="nav-link ">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
@@ -316,7 +320,50 @@
 
 
 
+        <!-- footer -->
+        <footer class="bgblack pb-5 pt-3">
+            <div class="container">
+                <div class="row justify-content-center">
 
+
+                    <div class="col-12 col-md-6 text-center my-auto mt-5">
+                        <p class="fs-4 font-exo">Created by DPS Greater Faridabad <br> for <br> Inter DPS - CodeClash
+                        </p>
+
+                    </div>
+
+                    <div class="col-12 col-md-6 mt-5">
+                        <div class="row justify-content-evenly">
+                            <div class="col-3 justify-content-center text-center">
+                                <p class="fs-3 font-exo mb-3">Links</p>
+                                <a href="index.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Home </a>
+                                <br>
+                                <a href="about.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">About
+                                </a>
+                                <br>
+                                <a href="blog.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Blogs
+                                </a> <br>
+                                <a href="quiz.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Quiz
+                                </a> <br>
+                                <a href="reports.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Reports
+                                </a> <br>
+
+                            </div>
+
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </footer>
 
 
 
