--- a/quiz.html
+++ b/quiz.html
@@ -50,7 +50,7 @@
 
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
-                                class="nav-link  hover-orange ">About</a></b>
+                                class="nav-link  hover-orange">About</a></b>
                     </li>
 
 
@@ -61,6 +61,10 @@
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
                                 class="nav-link hover-orange active">Quiz</a></b>
+                    </li>
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
+                                class="nav-link hover-orange ">Reports</a></b>
                     </li>
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
@@ -94,7 +98,6 @@
             </div>
         </nav>
 
-
         <div style="height: 70px;"></div>
 
 
@@ -109,7 +112,7 @@
                 </div>
 
                 <div class="row">
-                    <p class="fs-5 font-exo">Find out how much you know about fire ecology and the environment</p>
+                    <p class="fs-5 font-exo">Find out how much you know about fire ecology and the environment. Do read the case studies before as that will help a lot</p>
                 </div>
             </div>
 
@@ -183,6 +186,56 @@
         </section>
         <div style="height: 50px;" class="quizbg"></div>
 
+        <!-- footer -->
+        <footer class="bgblack pb-5 pt-3">
+            <div class="container">
+                <div class="row justify-content-center">
+
+
+                    <div class="col-12 col-md-6 text-center my-auto mt-5">
+                        <p class="fs-4 font-exo">Created by DPS Greater Faridabad <br> for <br> Inter DPS - CodeClash
+                        </p>
+
+                    </div>
+
+                    <div class="col-12 col-md-6 mt-5">
+                        <div class="row justify-content-evenly">
+                            <div class="col-3 justify-content-center text-center">
+                                <p class="fs-3 font-exo mb-3">Links</p>
+                                <a href="index.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Home </a>
+                                <br>
+                                <a href="about.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">About
+                                </a>
+                                <br>
+                                <a href="blog.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Blogs
+                                </a> <br>
+                                <a href="quiz.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Quiz
+                                </a> <br>
+                                <a href="reports.html"
+                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Reports
+                                </a> <br>
+
+                            </div>
+
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </footer>
+
+
+        <!-- Firebase Connection -->
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
 
         <script src="script.js"></script>
