SUiiiiiiiiiiiiiii blog is working
baka

--- a/blogwrite.html
+++ b/blogwrite.html
@@ -122,8 +122,6 @@
                     </div>
 
 
-
-
                     <!-- Author/By of the blog -->
                     <div class="mb-4">
                         <label for="author" class="form-label">Writer</label>
@@ -152,8 +150,6 @@
                             placeholder="Once upon a time in......"></textarea>
                     </div>
 
-
-
                     <!-- post button -->
                     <div class="mt-2">
 
@@ -168,10 +164,11 @@
         <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-storage.js"></script>
 
         <script src="script.js"></script>
 
-
+<!-- 
         <script type="text/javascript">
             textarea = document.getElementById("blogContent");
             textarea.addEventListener('input', autoResize);
@@ -180,7 +177,7 @@
                 this.style.height = 'auto';
                 this.style.height = this.scrollHeight + 'px';
             }
-        </script>
+        </script> -->
 
        
 
