--- a/blogwrite.html
+++ b/blogwrite.html
@@ -19,6 +19,7 @@
 
     <body onload="userIcon()">
 
+        
         <!-- navbar-->
         <nav class="navbar navbar-expand-md navbar-dark pt-3 bgblack">
 
@@ -45,12 +46,12 @@
                 <ul class="navbar-nav ms-auto  d-flex align-items-center ">
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
-                                class="nav-link hover-orange ">Home</a></b>
+                                class="nav-link hover-orange">Home</a></b>
                     </li>
 
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
-                                class="nav-link  hover-orange ">About</a></b>
+                                class="nav-link  hover-orange">About</a></b>
                     </li>
 
 
@@ -61,6 +62,10 @@
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
                                 class="nav-link hover-orange">Quiz</a></b>
+                    </li>
+
+                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
+                                class="nav-link hover-orange">Reports</a></b>
                     </li>
 
                     <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
@@ -99,7 +104,7 @@
 
         <!-- heading -->
 
-        <section class="bgblack py-5">
+        <section class="bgblack py-5" id="content-area">
             <div class="text-center">
                 <p class="fs-3">Write your blog</p>
             </div>
