--- a/blog.html
+++ b/blog.html
@@ -18,174 +18,185 @@
 
     </head>
 
-    <body class="bgBlog" onload="dataAndicon()">
+    <body class="bgBlog " onload="dataAndicon()">
 
 
+        <section class="" id="blurBG">
+            <!-- navbar-->
+            <nav class="navbar navbar-expand-md navbar-dark pt-3 bgblack">
 
-        <!-- navbar-->
-        <nav class="navbar navbar-expand-md navbar-dark pt-3 bgblack">
+                <div class="container-fluid align-items-center">
 
-            <div class="container-fluid align-items-center">
-
-                <a href="index.html" class="nav-brand text-light p-2 fs-3 ms-3">
-
-
-                    <svg xmlns="http://www.w3.org/2000/svg" class="hover-orange" height="1.4em" fill="white"
-                        class="bi bi-fire" viewBox="0 0 16 16">
-                        <path
-                            d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
-                    </svg>
-                </a>
+                    <a href="index.html" class="nav-brand text-light p-2 fs-3 ms-3">
 
 
-                <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTwo">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="hover-orange" height="1.4em" fill="white"
+                            class="bi bi-fire" viewBox="0 0 16 16">
+                            <path
+                                d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z" />
+                        </svg>
+                    </a>
 
 
-            <div class="collapse navbar-collapse me-3" id="navbarTwo">
-                <ul class="navbar-nav ms-auto  d-flex align-items-center ">
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
-                                class="nav-link hover-orange">Home</a></b>
-                    </li>
-
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
-                                class="nav-link  hover-orange">About</a></b>
-                    </li>
-
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blog.html"
-                                class="nav-link  hover-orange active">Blog</a></b>
-                    </li>
-
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
-                                class="nav-link hover-orange">Quiz</a></b>
-                    </li>
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
-                                class="nav-link hover-orange">Reports</a></b>
-                    </li>
-
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5 "> <b><a href="blogwrite.html" class="nav-link ">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
-                                    class="bi bi-pencil-square hover-orange my-auto" viewBox="0 0 16 16">
-                                    <path
-                                        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                                    <path fill-rule="evenodd"
-                                        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-                                </svg>
-                            </a> </b>
-                    </li>
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
-                                class="nav-link ">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
-                                    class="bi bi-person-circle hover-orange my-auto" viewBox="0 0 16 16">
-                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-                                    <path fill-rule="evenodd"
-                                        d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-                                </svg>
-                            </a> </b>
-                    </li>
-
-
-                    <li class="nav-item mt-lg-1 mx-3 fs-5 d-none" id="LogutIcon"> <b><a href="#" class="nav-link "
-                                onclick="logout()">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
-                                    class="bi bi-box-arrow-right hover-orange my-auto" viewBox="0 0 16 16">
-                                    <path fill-rule="evenodd"
-                                        d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
-                                    <path fill-rule="evenodd"
-                                        d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
-                                </svg>
-                            </a> </b>
-                    </li>
-
-
-                </ul>
-            </div>
-
-            </div>
-        </nav>
-
-
-        <div style="height: 100px;"></div>
-
-
-        <!-- blogs -->
-
-        <section id="blogSections">
-            <div class="container">
-
-                <div class="row justify-content-center" id="loading">
-                    <div class="col-5 text-center">
-
-                        <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
-                        <span role="status">Loading...</span>
-
-                    </div>
+                    <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTwo">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                 </div>
-                <div class="row justify-content-evenly" id="blogList">
 
 
+                <div class="collapse navbar-collapse me-3" id="navbarTwo">
+                    <ul class="navbar-nav ms-auto  d-flex align-items-center ">
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="index.html"
+                                    class="nav-link hover-orange">Home</a></b>
+                        </li>
+
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="about.html"
+                                    class="nav-link  hover-orange">About</a></b>
+                        </li>
+
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="blog.html"
+                                    class="nav-link  hover-orange active">Blog</a></b>
+                        </li>
+
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
+                                    class="nav-link hover-orange">Quiz</a></b>
+                        </li>
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
+                                    class="nav-link hover-orange">Reports</a></b>
+                        </li>
+
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5 "> <b><a href="blogwrite.html" class="nav-link ">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
+                                        class="bi bi-pencil-square hover-orange my-auto" viewBox="0 0 16 16">
+                                        <path
+                                            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                        <path fill-rule="evenodd"
+                                            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                                    </svg>
+                                </a> </b>
+                        </li>
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5 " id="profileIcon"> <b><a href="signup.html"
+                                    class="nav-link ">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
+                                        class="bi bi-person-circle hover-orange my-auto" viewBox="0 0 16 16">
+                                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                        <path fill-rule="evenodd"
+                                            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                    </svg>
+                                </a> </b>
+                        </li>
+
+
+                        <li class="nav-item mt-lg-1 mx-3 fs-5 d-none" id="LogutIcon"> <b><a href="#" class="nav-link "
+                                    onclick="logout()">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="1.8em" fill="gray"
+                                        class="bi bi-box-arrow-right hover-orange my-auto" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                            d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
+                                        <path fill-rule="evenodd"
+                                            d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
+                                    </svg>
+                                </a> </b>
+                        </li>
+
+
+                    </ul>
+                </div>
 
                 </div>
-            </div>
-        </section>
-
-        <!-- footer -->
-        <footer class="bgblack pb-5 pt-3">
-            <div class="container">
-                <div class="row justify-content-center">
+            </nav>
 
 
-                    <div class="col-12 col-md-6 text-center my-auto mt-5">
-                        <p class="fs-4 font-exo">Created by DPS Greater Faridabad <br> for <br> Inter DPS - CodeClash
-                        </p>
+            <div style="height: 100px;"></div>
 
-                    </div>
 
-                    <div class="col-12 col-md-6 mt-5">
-                        <div class="row justify-content-evenly">
-                            <div class="col-3 justify-content-center text-center">
-                                <p class="fs-3 font-exo mb-3">Links</p>
-                                <a href="index.html"
-                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Home </a>
-                                <br>
-                                <a href="about.html"
-                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">About
-                                </a>
-                                <br>
-                                <a href="blog.html"
-                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Blogs
-                                </a> <br>
-                                <a href="quiz.html"
-                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Quiz
-                                </a> <br>
-                                <a href="reports.html"
-                                    class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Reports
-                                </a> <br>
+            <!-- blogs -->
 
-                            </div>
+            <section id="blogSections">
+                <div class="container">
 
+                    <div class="row justify-content-center" id="loading">
+                        <div class="col-5 text-center">
+
+                            <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                            <span role="status">Loading...</span>
 
                         </div>
                     </div>
+                    <div class="row justify-content-evenly" id="blogList">
+
+
+
+                    </div>
+                </div>
+            </section>
+
+            <!-- footer -->
+            <footer class="bgblack pb-5 pt-3">
+                <div class="container">
+                    <div class="row justify-content-center">
+
+
+                        <div class="col-12 col-md-6 text-center my-auto mt-5">
+                            <p class="fs-4 font-exo">Created by DPS Greater Faridabad <br> for <br> Inter DPS -
+                                CodeClash
+                            </p>
+
+                        </div>
+
+                        <div class="col-12 col-md-6 mt-5">
+                            <div class="row justify-content-evenly">
+                                <div class="col-3 justify-content-center text-center">
+                                    <p class="fs-3 font-exo mb-3">Links</p>
+                                    <a href="index.html"
+                                        class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Home </a>
+                                    <br>
+                                    <a href="about.html"
+                                        class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">About
+                                    </a>
+                                    <br>
+                                    <a href="blog.html"
+                                        class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Blogs
+                                    </a> <br>
+                                    <a href="quiz.html"
+                                        class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Quiz
+                                    </a> <br>
+                                    <a href="reports.html"
+                                        class="fs-6 font-comfortaa text-decoration-none footer-link  my-2 ">Reports
+                                    </a> <br>
+
+                                </div>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+
 
                 </div>
+            </footer>
+        </section>
 
+        <div class="container rounded-4 d-flex justify-content-center blogRead" id="">
+            <div class="row ">
+                <div class="col-12  py-4">
+                    <span class="fs-2 ms-2 text-center" id="readTitle"></span> <br>
+                    <span class="fs-6 ms-2 text-center" id="readAuthor"></span> <br> <br> <br>
+                    <span class="fs-6 ms-2 text-justify" id="readContent">
+                    </span>
 
+                </div>
             </div>
-        </footer>
-
-
-
-
+        </div>
 
 
         <!-- 
