--- a/blog.html
+++ b/blog.html
@@ -63,17 +63,17 @@
                         </li>
 
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
-                                class="nav-link hover-orange">Quiz</a></b>
-                    </li>
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
+                                    class="nav-link hover-orange">Quiz</a></b>
+                        </li>
 
                         <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="reports.html"
                                     class="nav-link hover-orange">Reports</a></b>
                         </li>
 
-                    <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
-                                class="nav-link hover-orange">Quiz</a></b>
-                    </li>
+                        <li class="nav-item mt-lg-1 mx-3 fs-5"> <b><a href="quiz.html"
+                                    class="nav-link hover-orange">Quiz</a></b>
+                        </li>
 
 
                         <li class="nav-item mt-lg-1 mx-3 fs-5 "> <b><a href="blogwrite.html" class="nav-link ">
@@ -190,19 +190,66 @@
             </footer>
         </section>
 
-        <div class="container rounded-4 d-flex justify-content-center blogRead" id="">
-            <div class="row ">
-                <div class="col-12  py-4">
-                    <span class="fs-2 ms-2 text-center" id="readTitle"></span> <br>
-                    <span class="fs-6 ms-2 text-center" id="readAuthor"></span> <br> <br> <br>
-                    <span class="fs-6 ms-2 text-justify" id="readContent">
-                    </span>
+        <section id="blogReads">
+            <div class="container rounded-4 d-flex justify-content-center blogRead" id="">
+
+                <div class="row ">
+                    <div class="col-12  py-4">
+                        <button class="closeBtn" onclick="">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="1.8em" fill="currentColor"
+                                class="bi bi-x-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                <path
+                                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                            </svg>
+                        </button>
+                        <br> <br>
+                        <span class="fs-2 " id="readTitle">onece upon a tmime</span>
+
+                        <br>
+
+                        <span class="fs-6 " id="readAuthor">ashmeet isfhhg</span> <br> <br> <br>
+
+                        <span class="fs-6 text-justify" id="readContent">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Facere adipisci ab reprehenderit nam pariatur quos deserunt tenetur in
+                            voluptatem quisquam, velit tempora eos, vitae exercitationem illo voluptatum cum nesciunt.
+                            Officia.
+                            Eligendi, aliquid nulla, ratione, nemo quis a reiciendis minima quos ipsum dicta fuga
+                            dignissimos. Nesciunt deleniti ea quae voluptatem maxime ullam temporibus, fugiat, ipsum
+                            aperiam neque nostrum quisquam nisi quos.
+                            Sapiente minus dolore magni doloribus necessitatibus molestias repellat, cumque deserunt
+                            itaque, minima quasi adipisci reiciendis impedit est fugiat praesentium sint aut saepe
+                            voluptate voluptas, vero eligendi corrupti? Distinctio, sed consectetur!
+                            Expedita reprehenderit placeat officiis quos a incidunt nostrum voluptates saepe tenetur
+                            consequatur, quibusdam distinctio nobis. Eum, necessitatibus! Voluptatem quas illum harum
+                            optio ex, ipsa unde, modi quod repellendus, cumque recusandae.
+                            Sequi ducimus rem cumque vel earum esse. Omnis voluptate tenetur numquam aspernatur in
+                            culpa, repellendus sequi cumque quam mollitia, esse assumenda vero doloremque quae eos et
+                            delectus nam voluptatem voluptates.
+                            Ab, voluptatem. Quod nemo, eos atque pariatur velit repellendus a tenetur cumque ullam
+                            voluptas inventore dolores debitis accusamus libero modi veniam nam quaerat reiciendis
+                            numquam. Neque, placeat quo. Vel, delectus.
+                            Itaque assumenda praesentium reiciendis unde neque veritatis, fugiat optio accusamus
+                            quibusdam totam harum id corporis aliquam nulla iste doloribus culpa magni laborum rem
+                            ratione aut dicta tempora cumque quis. Ducimus.
+                            Veniam harum voluptas totam rerum asperiores, error pariatur sit fugit aspernatur earum,
+                            saepe numquam tempore beatae, doloribus accusamus incidunt! Tenetur maxime, magnam quas
+                            aliquid obcaecati corrupti quibusdam distinctio neque commodi!
+                            Tempora vel ullam odio amet eveniet, incidunt repellendus ipsum eaque placeat dignissimos,
+                            perspiciatis dolorem vitae quam sed rerum culpa totam accusamus? Ad accusamus soluta magnam
+                            sint id ratione, maiores voluptates?
+                            Alias, praesentium mollitia temporibus recusandae rerum optio laboriosam eum tempore
+                            deleniti libero. A tenetur dolorem distinctio explicabo at veniam quisquam, mollitia aliquid
+                            quidem deleniti doloremque obcaecati, atque totam magnam nostrum.
+                        </span>
+
+                    </div>
+
 
                 </div>
             </div>
-        </div>
 
-
+        </section>
         <!-- 
         <section id="blogSections">
             <div class="container">
