--- a/blog.html
+++ b/blog.html
@@ -204,43 +204,13 @@
                             </svg>
                         </button>
                         <br> <br>
-                        <span class="fs-2 " id="readTitle">onece upon a tmime</span>
+                        <span class="fs-2 " id="readTitle"></span>
 
                         <br>
 
-                        <span class="fs-6 " id="readAuthor">ashmeet isfhhg</span> <br> <br> <br>
+                        <span class="fs-6 " id="readAuthor"></span> <br> <br> <br>
 
-                        <span class="fs-6 text-justify" id="readContent">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Facere adipisci ab reprehenderit nam pariatur quos deserunt tenetur in
-                            voluptatem quisquam, velit tempora eos, vitae exercitationem illo voluptatum cum nesciunt.
-                            Officia.
-                            Eligendi, aliquid nulla, ratione, nemo quis a reiciendis minima quos ipsum dicta fuga
-                            dignissimos. Nesciunt deleniti ea quae voluptatem maxime ullam temporibus, fugiat, ipsum
-                            aperiam neque nostrum quisquam nisi quos.
-                            Sapiente minus dolore magni doloribus necessitatibus molestias repellat, cumque deserunt
-                            itaque, minima quasi adipisci reiciendis impedit est fugiat praesentium sint aut saepe
-                            voluptate voluptas, vero eligendi corrupti? Distinctio, sed consectetur!
-                            Expedita reprehenderit placeat officiis quos a incidunt nostrum voluptates saepe tenetur
-                            consequatur, quibusdam distinctio nobis. Eum, necessitatibus! Voluptatem quas illum harum
-                            optio ex, ipsa unde, modi quod repellendus, cumque recusandae.
-                            Sequi ducimus rem cumque vel earum esse. Omnis voluptate tenetur numquam aspernatur in
-                            culpa, repellendus sequi cumque quam mollitia, esse assumenda vero doloremque quae eos et
-                            delectus nam voluptatem voluptates.
-                            Ab, voluptatem. Quod nemo, eos atque pariatur velit repellendus a tenetur cumque ullam
-                            voluptas inventore dolores debitis accusamus libero modi veniam nam quaerat reiciendis
-                            numquam. Neque, placeat quo. Vel, delectus.
-                            Itaque assumenda praesentium reiciendis unde neque veritatis, fugiat optio accusamus
-                            quibusdam totam harum id corporis aliquam nulla iste doloribus culpa magni laborum rem
-                            ratione aut dicta tempora cumque quis. Ducimus.
-                            Veniam harum voluptas totam rerum asperiores, error pariatur sit fugit aspernatur earum,
-                            saepe numquam tempore beatae, doloribus accusamus incidunt! Tenetur maxime, magnam quas
-                            aliquid obcaecati corrupti quibusdam distinctio neque commodi!
-                            Tempora vel ullam odio amet eveniet, incidunt repellendus ipsum eaque placeat dignissimos,
-                            perspiciatis dolorem vitae quam sed rerum culpa totam accusamus? Ad accusamus soluta magnam
-                            sint id ratione, maiores voluptates?
-                            Alias, praesentium mollitia temporibus recusandae rerum optio laboriosam eum tempore
-                            deleniti libero. A tenetur dolorem distinctio explicabo at veniam quisquam, mollitia aliquid
-                            quidem deleniti doloremque obcaecati, atque totam magnam nostrum.
+                        <span class="fs-6 text-justify" id="readContent">
                         </span>
 
                     </div>
@@ -267,10 +237,10 @@
 
                 </div>
             </div>
-        </section> --_>
+        </section> -->
 
 
-        <-- Firebase Connection -->
+        <!-- Firebase Connection -->
         <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
