--- a/reports.html
+++ b/reports.html
@@ -156,7 +156,7 @@
                             the age-old conventional methods of dousing fires by beating them with bushes and tree
                             branches." Vikas tells The Better India. <br>
 
-                            <img src="img/earthFIreEco.png" alt="" class="img-fluid caseImg float-md-start"> <br> <br>
+                            <img src="img/fire_triangle.png" alt="" class="img-fluid caseImg float-md-start"> <br> <br>
 
                             During his research to stop Jharkhand's horrendous forest fires, Vikas Ujjwal, Divisional
                             Forest Officer of Jharkhand's Lohardaga district, came across a Class 6 physics chapter.
