--- a/reports.html
+++ b/reports.html
@@ -112,7 +112,6 @@
                 <div class="row ">
                     <!-- left side text -->
                     <div class="col-6 d-flex justify-content-center">
-                        <p class="fs-1 font-tektur">[Landing Page]</p>
                     </div>
 
                     <!-- right side img -->
@@ -146,6 +145,8 @@
             <div class="container-fluid">
                 <div class="row justify-content-evenly">
 
+
+                    
                     <div class="col-11 text-justify">
 
                         <p class="fs-1 font-preahvihear text-center mt-5">Case Study 1: Fighting fire with leaves</p>
@@ -179,7 +180,7 @@
                             but ecotourism success stories later inspired them. Vikas assured them of a guaranteed
                             income with a step-by-step process. <br>
 
-                            <img src="img/earthFIreEco.png" alt="" class="img-fluid caseImg float-md-end"> <br> <br>
+                            <img src="img/Burning_Leaves.jpg" alt="" class="img-fluid caseImg float-md-end"> <br> <br>
 
                             A Joint Forest Management Committee (JFMC) comprising 15 people from different villages
                             oversees the entire briquette plant. The plant can process 1 tonne of leaves daily and
@@ -246,9 +247,9 @@
                             study is the Great Fire of London in 1666, which razed a significant portion of the city,
                             leading to the realization of the importance of fire-resistant building materials and better
                             urban design. This catastrophe prompted the adoption of regulations for wider streets and
-                            brick construction, laying the foundation for safer urban development. <br>
+                            brick construction, laying the foundation for safer urban development. <br> <br>
 
-                            <img src="img/earthFIreEco.png" alt="" class="img-fluid caseImg float-md-start"> <br>
+                            <img src="img/fire_city.jpg" alt="" class="img-fluid caseImg float-md-start">
 
 
 
@@ -327,9 +328,9 @@
                             animal landscapes. In 1988, a series of wildfires swept through the park, leaving in their
                             wake a landscape of charred trees and scorched earth. Initially, these scenes painted a
                             picture of devastation, and concerns arose about the well-being of the park's diverse animal
-                            inhabitants. <br>
+                            inhabitants.
 
-                            <img src="img/earthFIreEco.png" alt="" class="img-fluid caseImg float-md-start"> <br>
+                            <img src="img/forest_burnt.jpg" alt="" class="img-fluid caseImg float-md-start">
 
 
                             However, over time, a remarkable transformation took place. The once-burnt areas, though
@@ -346,7 +347,7 @@
                             exploiting burnt trees for insects and nest cavities, flourished in the aftermath. This
                             exemplifies the intricate web of interactions in fire, where some species benefit
                             from disturbance while others face setbacks.<br>
-                            <img src="img/earthFIreEco.png" alt="" class="img-fluid caseImg float-md-end"> <br>
+                            <img src="img/animal_fire.jpg" alt="" class="img-fluid caseImg float-md-end"> 
 
 
                             Importantly, fire's influence isn't limited to immediate post-fire effects. Over the long
@@ -356,7 +357,7 @@
                             managers valuable lessons about the role of fire in shaping animal habitats. Subsequent
                             management strategies now incorporate controlled burns to mimic natural processes, promote
                             vegetation diversity, and create a dynamic landscape that caters to the needs of a wide
-                            array of animal species.<br> <br>
+                            array of animal species.<br> 
 
                             In conclusion, the story of fire and its impact on animal habitats is one of
                             complexity and adaptation. Through destruction and rebirth, fire shapes landscapes,
